# roomdesign

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PUBLISH_TO_GITHUB.md  QUICKSTART_ZH.md  TOOL_REFERENCE.md
examples/: mcp-config.json
src/autocad_interior_mcp/: __init__.py  autocad_client.py  interior_ops.py  server.py
